Update study functionality
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@834 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -412,6 +412,13 @@ a {
 	padding: 4px
 }
 
+.img_alignment_dark {
+	vertical-align: middle; 
+	background:#006666;
+	padding: 4px
+}
+
+
 .smallArrow {
 	position: relative;
 	top: -1px;
