--- a/metabolights-webapps/.settings/org.eclipse.wst.common.component
+++ b/metabolights-webapps/.settings/org.eclipse.wst.common.component
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="metabanana">
-        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+    <wb-module deploy-name="metabolights-webapp">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp/resources"/>
-        <property name="context-root" value="metaballs"/>
-        <property name="java-output-path" value="/metabanana/target/classes"/>
+        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/resource/metabolights-uploader/metabolights-uploader">
+            <dependency-type>uses</dependency-type> 
+        </dependent-module>
+        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/resource/metabolights-accessionmanager/metabolights-accessionmanager">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <property name="java-output-path" value="/metabolights-webapp/target/classes"/>
+        <property name="context-root" value="metabolights"/>
     </wb-module>
 </project-modules>
