--- a/metabolights-webapps/src/main/webapp/css/jquery-ui-1.8.15.custom.css
+++ b/metabolights-webapps/src/main/webapp/css/jquery-ui-1.8.15.custom.css
@@ -517,7 +517,8 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .ui-datepicker td span, .ui-datepicker td a { display: block; padding: .2em; text-align: right; text-decoration: none; }
 .ui-datepicker .ui-datepicker-buttonpane { background-image: none; margin: .7em 0 0 0; padding:0 .2em; border-left: 0; border-right: 0; border-bottom: 0; }
 .ui-datepicker .ui-datepicker-buttonpane button { float: right; margin: .5em .2em .4em; cursor: pointer; padding: .2em .6em .3em .6em; width:auto; overflow:visible; }
-.ui-datepicker .ui-datepicker-buttonpane button.ui-datepicker-current { float:left; }
+.ui-datepicker .ui-datepicker-buttonpane button.ui-datepicker-current { visibility:hidden }               /* Do not show the "Today" button */
+/*.ui-datepicker .ui-datepicker-buttonpane button.ui-datepicker-current { float:left; }                */
 
 /* with multiple calendars */
 .ui-datepicker.ui-datepicker-multi { width:auto; }
@@ -539,7 +540,8 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .ui-datepicker-rtl .ui-datepicker-next:hover { left: 1px; right: auto; }
 .ui-datepicker-rtl .ui-datepicker-buttonpane { clear:right; }
 .ui-datepicker-rtl .ui-datepicker-buttonpane button { float: left; }
-.ui-datepicker-rtl .ui-datepicker-buttonpane button.ui-datepicker-current { float:right; }
+/*.ui-datepicker-rtl .ui-datepicker-buttonpane button.ui-datepicker-current { float:right; }             */
+.ui-datepicker-rtl .ui-datepicker-buttonpane button.ui-datepicker-current { visibility:hidden }    /* Do not show the "Today" button */
 .ui-datepicker-rtl .ui-datepicker-group { float:right; }
 .ui-datepicker-rtl .ui-datepicker-group-last .ui-datepicker-header { border-right-width:0; border-left-width:1px; }
 .ui-datepicker-rtl .ui-datepicker-group-middle .ui-datepicker-header { border-right-width:0; border-left-width:1px; }
