Added multiline buttons
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@856 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -150,7 +150,7 @@ a {
 }
 
 .formbox {
-    border:1px solid #006666;
+    border:1px solid #408c8c;
     margin-top:10px;
     padding-top:0px;
     padding-left:20px;
@@ -162,7 +162,7 @@ a {
 }
 
 .filterbox {
-    border:1px solid #006666;
+    border:1px solid #408c8c;
     margin-top:10px;
     padding-top:10px;
     padding-left:10px;
@@ -174,7 +174,7 @@ a {
 }
 
 .formheader {
-   background-color:#006666;
+   background-color:#408c8c;
    color: #FFFFFF;
 }
 
