git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@901 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -271,7 +271,7 @@ a {
 
 /* Search Highlights */
 .highlight { 
-	background-color: YellowGreen;
+	background-color: #9acd32;
 	font-weight: bold; 
 }
 
@@ -448,7 +448,6 @@ a {
 	background:#006666;
 	padding: 4px
 }
-
 
 .smallArrow {
 	position: relative;
