Redesign entry page, 1st step.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@935 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -254,7 +254,7 @@ a {
 #resultList li {
 	text-indent: 5px;
 	list-style-position: outside;
-	list-style-image: url(../img/brownBullet.jpg);
+	list-style-image: url(../img/orangeBullet.jpg);
 	list-style-type: square;
 	padding: 2px;
 	margin: 0px;
@@ -263,7 +263,7 @@ a {
 #resultListText li {
     text-indent: 0px;
     list-style-position: outside;
-    list-style-image: url(../img/brownBullet.jpg);
+    list-style-image: url(../img/orangeBullet.jpg);
 	list-style-type: square;
     padding: 2px;
     margin: 0px;
