More accurate data in "Assay" tab in entry page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@943 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -204,6 +204,15 @@ a {
 .tableheader {
     padding: 10px 10px 10px 10px;
 }
+/* Table data styles*/
+.tableitem {
+    margin-top:10px;
+    padding-top:10px;
+    padding-left:10px;
+    padding-bottom:10px;
+	padding-right:10px;
+}
+
 
 /* paging */
 #content p {
