HTML fixes. New config files
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@958 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -20,7 +20,8 @@ a {
 	background: #ffffff url(../img/searchBox.png) repeat-x left top;
 	height: auto !important;
 	margin: -11px auto -4em;
-	position: relative;width: 1024px;
+	position: relative;
+    width: 1024px;
     font-family: Verdana, Arial, Helvetica, Geneva, sans-serif;
     font-size: 12px;
 }
@@ -46,7 +47,7 @@ a {
 
 /* Style for the top bar (=header) */
 #top_bar {
-	height: 58px;
+	height: 57px;
 }
 
 #top_bar h1 {
