CLient filter fox for faceted search, when items exceed 5.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1062 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -84,6 +84,9 @@ a {
 	background-image: url('../img/searchButton.png');
 }
 
+.inputDiscrete {
+	border: 1px solid #6F4A00;
+}
 .text_header {
 	color: #006666;
     background: #eef5f5;
