Add menu "action" in mystudies page. Actions: Update study, Change public release date, make study public (not finished yet). And delete commented.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1066 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -178,9 +178,9 @@ a {
     padding-left:10px;
     padding-bottom:15px;
 	padding-right:10px;
-    border-radius:10px 10px 10px 10px;
+/*    border-radius:10px 10px 10px 10px;
     -moz-border-radius: 10px 10px 10px 10px;
-    -webkit-border-radius:10px 10px 10px 10px;
+    -webkit-border-radius:10px 10px 10px 10px;*/
 }
 
 /* extend formbox with a border, for entry and searchresults etc */
@@ -484,6 +484,3 @@ a {
     left: 0;
     z-index: 100;
 }
-
-
-/*credits: http://ryanfait.com/resources/footer-stick-to-bottom-of-page/*/
