--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -178,9 +178,9 @@ a {
     padding-left:10px;
     padding-bottom:15px;
 	padding-right:10px;
-/*    border-radius:10px 10px 10px 10px;
+    border-radius:10px 10px 10px 10px;
     -moz-border-radius: 10px 10px 10px 10px;
-    -webkit-border-radius:10px 10px 10px 10px;*/
+    -webkit-border-radius:10px 10px 10px 10px;
 }
 
 /* extend formbox with a border, for entry and searchresults etc */
