Using frontier WS in combination with a ModelAndView factory. (Cancelling web.xml filter for wrapping the response) Redesign: use new frontier style: Index, about, download help.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1109 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
@@ -1,9 +1,9 @@
 /* Style cancellations from other css with less priority
 /* --- Links --- */
-a:link,
-a:active,
-a:visited {
+a.noLine {
 	border-bottom-width: 0px;
+	border-bottom-style: none;
+	border-bottom-color: inherit; 
 }
 
 /* Generic div */
@@ -33,3 +33,14 @@ a:visited {
 	min-height:200px;
 }
 
+/* centered items */
+.center {
+    text-align:center;
+}
+
+.icon{
+	vertical-align:text-bottom;
+	background: #ffd98f;
+    color: #000000;
+    padding: 5px 5px 5px 5px;
+}
