Adapt al request mapped by Login controller to frontier L&F https://www.pivotaltracker.com/story/show/34509737
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1110 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
@@ -40,7 +40,34 @@ a.noLine {
 
 .icon{
 	vertical-align:text-bottom;
-	background: #ffd98f;
+	background: #bbbbbb;/*#ffd98f;*/
     color: #000000;
-    padding: 5px 5px 5px 5px;
+    padding: 3px 3px 3px 3px;
+    
+}
+.icon:hover{
+	background: #dddddd;
+}
+
+form input.cancel{
+	border-color: #999999;	/* P2 */
+	
+	background-color: #eeeeee;	/* colour P1 */
+	background-image: none; 
+	
+	
+	color: #444444;
+	text-shadow: none;
+	box-shadow: none;
+}
+
+/* Cancel default display style for inputs */
+form input.submit,
+input{
+	display:inline;
+}
+
+.error {
+	color:#AA0000;
+	font-weight: bold;
 }
