Account controller + associated jsp redesigned. EBI icons Sprited and used in download login and others.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1118 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
@@ -38,16 +38,6 @@ a.noLine {
     text-align:center;
 }
 
-.icon{
-	vertical-align:text-bottom;
-	background: #bbbbbb;/*#ffd98f;*/
-    color: #000000;
-    padding: 3px 3px 3px 3px;
-    
-}
-.icon:hover{
-	background: #dddddd;
-}
 
 form input.cancel{
 	border-color: #999999;	/* P2 */
@@ -59,6 +49,10 @@ form input.cancel{
 	color: #444444;
 	text-shadow: none;
 	box-shadow: none;
+}
+
+form input.bigfont {
+	font-size: 20px
 }
 
 /* Cancel default display style for inputs */
