--- a/metabolights-webapps/src/main/webapp/cssrl/icons.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/icons.css
@@ -7,6 +7,9 @@
 	vertical-align:text-bottom;
 	background: url(../img/ebi-icons/ebi-sprites.png) no-repeat top left;
 	background-color: #bbbbbb;
+	border-radius:3px 3px 3px 3px;
+   	-moz-border-radius: 3px 3px 3px 3px;
+   	-webkit-border-radius:3px 3px 3px 3px;
 }
 
 .ebiicon:hover{
