--- a/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
@@ -20,13 +20,13 @@ a.noLine {
 
 div .box {
 	background-color: #ffffff;
-	margin: 0px 2px 2px 4px;
+	margin: 3px 0px 3px 0px;
 	padding: 5px 5px 5px 5px; /* top right bottom left */
 	overflow: auto;
 	border: 1px solid #aaaaaa;/**/
-	border-radius:5px 5px 5px 5px;
-   	-moz-border-radius: 5px 5px 5px 5px;
-   	-webkit-border-radius:5px 5px 5px 5px;
+	border-radius:3px 3px 3px 3px;
+   	-moz-border-radius: 3px 3px 3px 3px;
+   	-webkit-border-radius:3px 3px 3px 3px;
 }
 
 
@@ -71,7 +71,8 @@ div .box {
 .title {
 	color: #006666;
     background: #eef5f5;
- 	padding: 10px 0px 5px 10px;
+ 	padding: 5px 5px 5px 5px;
+ 	margin: 8px 0px 8px 0px;
 	font-size: 120%;
 	font-weight: bold;
 	border-radius:5px 5px 5px 5px;
@@ -151,9 +152,8 @@ input{
 	margin: 0;
 	padding: 0;
 	list-style: none;
-	float: left;
 	font-weight: bold;
-	float: right;
+	float: left;
 }
 
 #sddm li a {	
@@ -163,6 +163,8 @@ input{
     color: #004242;
 	text-align: center;
 	text-decoration: none;
+	border-bottom-style: none;
+	font-weight: bold;
 }
 
 #sddm li a:hover {
@@ -195,6 +197,44 @@ input{
 #sddm div a:hover {	
 	background: #bdd7d7;
     color: #004242;
+}
+
+.smallArrow {
+	position: relative;
+	top: -1px;
+	border-style: solid dashed dashed;
+	border-color: transparent;
+	border-top-color: #ffd98f;
+	display: -moz-inline-box;
+	display: inline-block;
+	font-size: 0;
+	height: 0;
+	line-height: 0;
+	width: 0;
+	border-width: 5px 5px 0;
+	padding-top: 1px;
+	left: 4px;
+}
+
+#resultList li {
+	text-indent: 5px;
+	list-style-position: outside;
+	list-style-image: url(../img/orangeBullet.jpg);
+	list-style-type: square;
+	padding: 2px;
+	margin: 0px;
+}
+
+.topSpacer {
+	height:78px;
+}
+
+.topSpacerFilter {
+	height:23px;
+}
+
+.topSpacerFilter.noText {
+	height:0px;
 }
 
 
