Entry Page request adapted to new design.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1125 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
@@ -5,6 +5,10 @@ a.noLine {
 	border-bottom-style: none;
 	
 }
+a.noLine:link,
+a.noLine:visited{
+	border-bottom-width: 0px;
+}
 
 /* Generic div */
 .refLayerBox {
