Redesign of SubmissionCOntroller, SubmissionQueueCOntrollers request/pages
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1127 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/icons.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/icons.css
@@ -22,7 +22,7 @@
 .airplane{ background-position: 0 -192px; width: 36px; height: 36px; } 
 .alarm{ background-position: 0 -256px; width: 36px; height: 36px; } 
 .album{ background-position: 0 -320px; width: 36px; height: 36px; } 
-.alert{ background-position: 0 -384px; width: 36px; height: 36px; } 
+.alert_i{ background-position: 0 -384px; width: 36px; height: 36px; } 
 .announcement{ background-position: 0 -448px; width: 36px; height: 36px; } 
 .archive{ background-position: 0 -512px; width: 36px; height: 36px; } 
 .arrow-down{ background-position: 0 -576px; width: 36px; height: 36px; } 
