--- a/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
@@ -1,6 +1,7 @@
 /* Style cancellations from other css with less priority
 /* --- Links --- */
-a.noLine {
+a.noLine,
+.bigbutton a {
 	
 	border-bottom-style: none;
 	
@@ -87,7 +88,6 @@ div .box {
 	float:right;
 }
 
-
 /* Tab style */
 .tab {
 	min-height:200px;
@@ -98,21 +98,17 @@ div .box {
     text-align:center;
 }
 
-
 form input.cancel{
 	border-color: #999999;	/* P2 */
-	
 	background-color: #eeeeee;	/* colour P1 */
 	background-image: none; 
-	
-	
 	color: #444444;
 	text-shadow: none;
 	box-shadow: none;
 }
-
+.bigfont,
 form input.bigfont {
-	font-size: 20px
+	font-size: 150%
 }
 
 /* Cancel default display style for inputs */
@@ -138,8 +134,52 @@ input{
 	display:block;
 }
 
+/* Color section */
+.maincolor{
+	color:#295c5c;
+}
+/* Maincolor inverted */
+.maincolorI{
+	color:#ffffff;
+	background-color:#295c5c;
+}
+
+.seccolor{
+	color:#E5A066;
+}
+.seccolorI{
+	color:#000000;
+	background-color:#E5A066;
+}
+
 .dimmed {
     color:#B0B0B0;
+}
+
+/* big buttons */
+.bigbutton {		
+	border-color: #000000;	/* P2 */
+	border: 1px solid #888888;/**/
+	border-radius:3px 3px 3px 3px;
+   	-moz-border-radius: 3px 3px 3px 3px;
+   	-webkit-border-radius:3px 3px 3px 3px;
+ 	padding: 6px 6px 6px 6px;
+    text-align:center;
+    opacity:0.9;
+	filter:alpha(opacity=90);
+    
+}
+
+.bigbutton:hover,
+.bigbutton:focus,
+.bigbutton:active {
+    opacity:1;
+	filter:alpha(opacity=100);
+}
+
+.bigbutton a{
+	color:inherit;
+		
 }
 
 /* sddm: simple drop down menu
@@ -241,4 +281,8 @@ input{
 	height:0px;
 }
 
+/* for hiding the X in a jquery dialog*/
+a.hide_closer{
+	visibility: hidden;
+}
 
