Breadcrumbs, login options page. Update account bug fixed (now curator status is saved).
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1135 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
@@ -159,6 +159,11 @@ input{
     color:#B0B0B0;
 }
 
+.bgcolor {
+    color:#ffffff;
+}
+
+
 /* big buttons */
 .bigbutton {		
 	border-color: #000000;	/* P2 */
@@ -185,6 +190,15 @@ input{
 		
 }
 
+.hidden {
+	display: none;
+}
+
+/*
+div#loginmenu ul{
+	margin-top:1px;
+}
+*/
 /* sddm: simple drop down menu
    CSS from in http://javascript-array.com/scripts/simple_drop_down_menu/
  */
