Add blog, twitter and facebook to about page.
Correct error in metabolites facet search when metabolite name has a '.

git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1137 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/iconfont/font_style.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/iconfont/font_style.css
@@ -15,6 +15,7 @@
 	content: attr(data-icon);
 	speak: none;
 	font-weight: normal;
+	line-height: 1;
 	-webkit-font-smoothing: antialiased;
 }
 
@@ -24,6 +25,7 @@
 	font-style: normal;
 	speak: none;
 	font-weight: normal;
+	line-height: 1;
 	-webkit-font-smoothing: antialiased;
 }
 .icon-lab:before {
@@ -61,4 +63,13 @@
 }
 .icon-book:before {
 	content: "\2c";
+}
+.icon-facebook:before {
+	content: "\2e";
+}
+.icon-twitter:before {
+	content: "\2f";
+}
+.icon-blogger:before {
+	content: "\2d";
 }
