--- a/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
@@ -57,7 +57,7 @@ div .box {
 	height:100px; 
 	border-top-width: 0px; 
 	border-bottom-width: 0px; 
-	padding-top: 20px; 
+	padding-top: auto; 
 	padding-bottom: 0px; 
 	padding-right: 0px; 
 	padding-left: 0px; 
