New homepage with a gallery. Option for updating the gallery items in config pages Entry page alignment fixed Now back to getting the full header from template WS
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1154 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/reflayer.css
@@ -7,7 +7,10 @@ a.noLine,
 	
 }
 a.noLine:link,
-a.noLine:visited{
+a.noLine:visited,
+a:noLine:hover,
+a:noLine:focus,
+a:noLine:active {
 	border-bottom-width: 0px;
 }
 
@@ -303,3 +306,8 @@ a.hide_closer{
 	visibility: hidden;
 }
 
+.coolframe{
+    height:400px;
+    padding:1em; 
+    background:#fff;
+}
