--- a/metabolights-webapps/src/main/webapp/cssrl/movingboxes.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/movingboxes.css
@@ -1,12 +1,12 @@
 /*** Overall MovingBoxes Slider ***/
 .mb-wrapper {
-	border: 1px solid #eee;
+	/*border: 1px solid #eee;*/
 	margin: 0 auto 5px;
 	position: relative;
 	left: 0;
 	top: 0;
 	border-radius: 5px;
-	box-shadow: inset 2px 2px 5px #aaa;
+	box-shadow: inset 2px 2px 2px 5px #888;
 }
 
 /* Panel Wrapper */
@@ -19,8 +19,7 @@
 	position: relative;
 	left: 0;
 	top: 0;
-    background: #666;
-
+    background: #aaa;
 	/***(>'-')> Control Panel Font size here <('-'<)***/
 	font-size: 18px;
 }
@@ -38,6 +37,9 @@
 	cursor: pointer;
 	float: left;
 	list-style: none;
+    width: 100%;
+    min-height: 100%;
+    /*box-shadow: inset 5px 5px 5px 5px #aaa;*/
 }
 
 /* Cursor to arrow over current panel, pointer for all others,
@@ -63,7 +65,7 @@ a.mb-scrollButtons {
 	height: 58px;
 	background: transparent url(../img/arrows.png) no-repeat;
 	position: absolute;
-	top: 2%;
+	top: 25%;
 	margin-top: 0px; /* if you change the arrow images, you may have to adjust this (1/2 height of arrow image) */
 	cursor: pointer;
 	text-decoration: none;
@@ -117,11 +119,11 @@ a.mb-scrollButtons.disabled {
 }
 
 .mb-panel {
-    opacity: 0.9;
-    filter: alpha(opacity=90);
+    /*opacity: 0.9;*/
+    /*filter: alpha(opacity=90);*/
     background: #fff;
 }
-.mb-panel.current {
-    opacity: 1;
-    filter: alpha(opacity=100);
-}
+/*.mb-panel.current {*/
+    /*opacity: 1;*/
+    /*filter: alpha(opacity=100);*/
+/*}*/
