Fix study health tab at config page to use the property filesystem folders (publicFtpLocation and privateFtpStageLocation). Changed download icon in the entry page. minor fixes when linking the data, and metabolites identifies tab to the files Improved a bit entry page load time.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1230 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -93,6 +93,12 @@ div .box {
     -webkit-border-radius:5px 5px 5px 5px;
 }
 
+.title a, .title  a:link, .title a:visited,
+.title a span.icon-functional::before
+{
+    color: #804D19;
+}
+
 .right {
     float:right;
 }
