Reaction tab changes. Added horizontal scroll bar, scaled images.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1243 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -39,6 +39,12 @@ div .box {
     -webkit-border-radius:3px 3px 3px 3px;
 }
 
+/*div attribute for reactions*/
+.reacTab {
+    overflow-x: auto;
+    white-space: nowrap;
+    width: 100%;
+}
 
 /* td attribute for + and ? */
 .tdSymbols {
