White icons on download and pagination
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1281 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -102,7 +102,7 @@ div .box {
 .title a, .title  a:link, .title a:visited,
 .title a span.icon-functional::before
 {
-    color: #804D19;
+    color: #ffffff;
 }
 
 .right {
