Reaction tab now will show Rhea Id. Bug fixes, code cleanup.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1311 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -44,21 +44,34 @@ div .box {
     overflow-x: auto;
     white-space: nowrap;
     width: 100%;
+    border-top-width: 0px;
+    border-right-width: 0px;
+    border-left-width: 0px;
+    border-bottom-width: 0px;
+}
+
+th, td {
+    border: none;
+    vertical-align: middle;
 }
 
 /* td attribute for + and ? */
 .tdSymbols {
     text-align: center;
     width: 5%;
-    border: 0px 0px 0px 0px;
-    padding-top: 40px;
-    padding-bottom: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
     border-top-width: 0px;
     border-right-width: 0px;
     border-left-width: 0px;
     border-bottom-width: 0px;
+    /*padding: 95px 10px 5px 10px;*/
+}
+
+#reacTab td {
+    text-align: center;
+}
+
+#reacTab td {
+    vertical-align: baseline;
 }
 
 /*td attribute for Reaction*/
@@ -103,6 +116,37 @@ div .box {
 .title a span.icon-functional::before
 {
     color: #ffffff;
+}
+
+.icon-chemistry:before
+{
+    font-family:'EBI-Chemistry';
+    font-size:150%;
+    color: rgb(0, 0, 0);
+    content:attr(data-icon);
+    margin:0
+}
+
+.forReactions:before
+{
+    font-family:'EBI-Functional';
+    font-size:60%;
+    color: rgb(0, 0, 0);
+    content:attr(data-icon);
+    margin:0
+}
+
+.icon-functional:before
+{
+    font-family:'EBI-Functional';
+    font-size:100%;
+    color: rgb(0, 0, 0);
+    content:attr(data-icon);
+    margin:0
+}
+
+span.icon.icon-chemistry {
+    color: #000000;
 }
 
 .right {
