Reverted to default colour for icons
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1313 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -136,20 +136,11 @@ th, td {
     margin:0
 }
 
-.icon-static:before,.icon-generic:before
+.helpGeneric:before
 {
     font-family:'EBI-Generic';
     font-size:100%;
     color:rgb(0, 0, 0);
-    content:attr(data-icon);
-    margin:0
-}
-
-.icon-functional:before
-{
-    font-family:'EBI-Functional';
-    font-size:100%;
-    color: rgb(0, 0, 0);
     content:attr(data-icon);
     margin:0
 }
