Bold text in download page now hyper linked. Make study public from details page, is with a white icon.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1344 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -113,7 +113,7 @@ th, td {
 }
 
 .title a, .title  a:link, .title a:visited,
-.title a span.icon-functional::before
+.title a span.icon-functional::before, .title a span.icon-generic::before
 {
     color: #ffffff;
 }
