Request url for serving pathways images ModelObjectFactory.getPathway methos added to get information od any pathway. Add spectrum browser css style
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1410 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -402,3 +402,9 @@ th a.icon-functional::before{
 input.resizable{
     width: 95%;
 }
+#spectrumbrowser{
+    overflow: auto;
+}
+#spectrumbrowser table{
+    border: 0px;
+}
