Reference Layer search now with the EBI icons for the tabs in the details page.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1415 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -118,7 +118,16 @@ th, td {
     color: #ffffff;
 }
 
-.icon-chemistry:before
+.colorBlack {
+    color:#000000;
+}
+
+.colourGrey {
+    font-size:150%;
+    color:#B0B0B0;
+}
+
+.foChemistry:before
 {
     font-family:'EBI-Chemistry';
     font-size:150%;
@@ -130,24 +139,41 @@ th, td {
 .forReactions:before
 {
     font-family:'EBI-Functional';
-    font-size:60%;
+    font-size:150%;
     color: rgb(0, 0, 0);
     content:attr(data-icon);
     margin:0
 }
 
+.forConceptual:before
+{
+    font-family:'EBI-Conceptual';
+    font-size:150%;
+    color: rgb(0, 0, 0);
+    content:attr(data-icon);
+    margin:0
+}
+
+.forSpecies:before
+{
+    font-family:'EBI-Species';
+    font-size:150%;
+    color: rgb(0, 0, 0);
+    content:attr(data-icon);
+    margin:0
+}
+
+
 .helpGeneric:before
 {
     font-family:'EBI-Generic';
-    font-size:100%;
+    font-size:150%;
     color:rgb(0, 0, 0);
     content:attr(data-icon);
     margin:0
 }
 
-span.icon.icon-chemistry {
-    color: #000000;
-}
+
 
 .right {
     float:right;
