Corrected the reactions symbols in CSS.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1416 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -127,7 +127,25 @@ th, td {
     color:#B0B0B0;
 }
 
-.foChemistry:before
+.forChemistry:before
+{
+    font-family:'EBI-Chemistry';
+    font-size:150%;
+    color: rgb(0, 0, 0);
+    content:attr(data-icon);
+    margin:0
+}
+
+.forReactChemistry:before
+{
+    font-family:'EBI-Chemistry';
+    font-size:150%;
+    color: rgb(0, 0, 0);
+    content:attr(data-icon);
+    margin:0
+}
+
+.foMS:before
 {
     font-family:'EBI-Chemistry';
     font-size:150%;
@@ -139,7 +157,7 @@ th, td {
 .forReactions:before
 {
     font-family:'EBI-Functional';
-    font-size:150%;
+    font-size:80%;
     color: rgb(0, 0, 0);
     content:attr(data-icon);
     margin:0
